syntax = "proto3";

package proto.data;
option go_package="blog/proto/data";

message ArticleData {
  int32 article_id  = 1; /// 記事ID
  string title      = 2; /// タイトル
  string body       = 3; /// 内容
  string created_at = 4; /// 作成時刻(unixtime)
  string updated_at = 5; /// 更新時刻(unixtime)
}
